--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://linkedin.com/in/fedizkodev">Linkedin</a>
                 <a class="apresentacao__links__link" href="https://github.com/DFedizko">GitHub</a>
             </div>
