--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong 
@@ -22,13 +27,15 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/fedizkodev">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/DFedizko">GitHub</a>
+                <a class="apresentacao__links__link" href="https://linkedin.com/in/fedizkodev"><img src="./assets/linkedin.png" width="32" height="32" alt="Ícone do linkedin">Linkedin</a>
+                <a class="apresentacao__links__link" href="https://github.com/DFedizko"><img src="./assets/github.png" width="32" height="32" alt="Ícone do github">GitHub</a>
             </div>
         </section>
-        <img class="imagem-pedro" width="488" height="550" src="imagem.png" alt="Foto do Pedro Fedizko">
+        <img class="imagem-pedro" width="488" height="550" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p class="rodape__texto">Desenvolvido por Pedro Fedizko</p>
+    </footer>
 </body>
 
 </html>
