--- a/about.html
+++ b/about.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <title>Sobre mim</title>
 </head>
-
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
@@ -18,18 +15,9 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong 
-            class="titulo-destaque">com um Front-end de qualidade!
-            </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Pedro Fedizko, desenvolvedor
-            Front-end com especialidade em HTML, CSS, Javascript e React. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
-            <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/fedizkodev"><img src="./assets/linkedin.png" width="32" height="32" alt="Ícone do linkedin">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/DFedizko"><img src="./assets/github.png" width="32" height="32" alt="Ícone do github">GitHub</a>
-            </div>
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">Olá, meu nome é Pedro Fedizko.</p>
+            <p class="apresentacao__conteudo__texto">Sou estudante de Engenharia de Software na FIAP e desenvolvedor front-end com conhecimento em HTML, CSS, JavaScript e React. Tenho paixão por criar interfaces responsivas e eficientes, sempre buscando a melhor experiência para o usuário. Estou constantemente evoluindo e ampliando minhas habilidades, com foco em entregar soluções modernas e funcionais.</p>
         </section>
         <img class="imagem-pedro" width="488" height="550" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
     </main>
@@ -39,5 +27,4 @@
         <p class="rodape__texto"><img src="./assets/phone-call.png" height="30px" width="30px" alt="Ícone de telefone">(11) 99500-1605</p>
     </footer>
 </body>
-
 </html>
