--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
             <p class="apresentacao__conteudo__texto">Olá, meu nome é Pedro Fedizko.</p>
             <p class="apresentacao__conteudo__texto">Sou estudante de Engenharia de Software na FIAP e desenvolvedor front-end com conhecimento em HTML, CSS, JavaScript e React. Tenho paixão por criar interfaces responsivas e eficientes, sempre buscando a melhor experiência para o usuário. Estou constantemente evoluindo e ampliando minhas habilidades, com foco em entregar soluções modernas e funcionais.</p>
         </section>
-        <img class="imagem-pedro" width="488" height="550" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
+        <img class="apresentacao__imagem-pedro" width="468" height="532" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
     </main>
     <footer class="rodape">
-        <p class="rodape__texto"><img width="30px" height="30px" src="./assets/email.png" alt="Ícone de email">fedizkopedro@gmail.com</p>
         <p class="rodape__texto">Desenvolvido por Pedro Fedizko</p>
+        <p class="rodape__texto"><img width="30px" height="30px" src="./assets/email.png" alt="Ícone de email">fedizkopedro@gmail.com</p>
         <p class="rodape__texto"><img src="./assets/phone-call.png" height="30px" width="30px" alt="Ícone de telefone">(11) 99500-1605</p>
     </footer>
 </body>
