--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/fedizkodev"><img src="./assets/linkedin.png" width="32" height="32" alt="Ícone do linkedin">Linkedin</a>
-                <a class="apresentacao__links__link" href="https://github.com/DFedizko"><img src="./assets/github.png" width="32" height="32" alt="Ícone do github">GitHub</a>
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fedizkodev"><img src="./assets/linkedin.png" width="32" height="32" alt="Ícone do linkedin">Linkedin</a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/DFedizko"><img src="./assets/github.png" width="32" height="32" alt="Ícone do github">GitHub</a>
             </div>
         </section>
-        <img class="imagem-pedro" width="488" height="550" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
+        <img class="apresentacao__imagem-pedro" width="468" height="532" src="./assets/Imagem.png" alt="Foto do Pedro Fedizko">
     </main>
     <footer class="rodape">
-        <p class="rodape__texto"><img width="30px" height="30px" src="./assets/email.png" alt="Ícone de email">fedizkopedro@gmail.com</p>
         <p class="rodape__texto">Desenvolvido por Pedro Fedizko</p>
+        <p class="rodape__texto"><img width="30px" height="30px" src="./assets/email.png" alt="Ícone de email">fedizkopedro@gmail.com</p>
         <p class="rodape__texto"><img src="./assets/phone-call.png" height="30px" width="30px" alt="Ícone de telefone">(11) 99500-1605</p>
     </footer>
 </body>
